create swagger documentation for storage route
